# koereskoleportalen

./: .gitignore  KoereskolePortalen.sln  README.md  azure-pipelines-test.yml  docfx.json  docker-compose.yml  index.md
Authentication.Service/: ApplicationDbContext.cs  Authentication.Service.csproj  Program.cs  appsettings.Development.json  appsettings.Production.json  appsettings.Staging.json  appsettings.json
BackOffice.API/: BackOffice.API.csproj  Program.cs  WeatherForecast.cs  appsettings.Development.json  docfx.json  schema.graphql
BackOffice.Client/: package-lock.json  package.json
Contracts/: ProductionUnitUpdatedEvent.cs  SubTenantClaimCreatedEvent.cs  TenantClaimCreatedEvent.cs  UserCreatedEvent.cs  UserUpdatedEvent.cs
CvrSync.Service/: CvrSync.Service.csproj  Program.cs
Portal.API/: Dockerfile  Dockerfile2  Portal.API.csproj  Program.cs  WeatherForecast.cs  appsettings.json
Portal.Client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
Synchronization.Service/: config.py  dockerfile  publish.py  pyproject.toml  requirements.txt  sync.py  syncNew.py
_site/: README.html  index.html  index.json  manifest.json  toc.html  toc.json
api/: Authentication.Service.Controllers.AuthController.yml  Authentication.Service.Data.ApplicationDbContext.yml  Authentication.Service.Data.yml  Authentication.Service.Dto.AssignRoleRequestDto.yml  Authentication.Service.Dto.CreateClaimDto.yml  Authentication.Service.Dto.LoginRequestDto.yml  Authentication.Service.Dto.LoginResponseDto.yml  Authentication.Service.Dto.RefreshTokenDto.yml  (+131 more)
(+643 files in other folders)
