[tool.poetry]
name = "synchronization-service"
version = "0.1.0"
description = ""
authors = ["Lasse Bøgeskov-Jensen <lass026q@stud.kea.com>"]
readme = "README.md"
packages = [{include = "synchronization"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.2.0"
json = "^2.0.9"
pymongo = "^4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
